# boiler-room

./: .gitignore  README.md  pyproject.toml
boiler_room/: git.py  github.py  main.py  models.py  pipeline.py
boiler_room/agents/: base.py  claude.py  codex.py  copilot.py
docs/superpowers/plans/: 2026-04-20-boiler-room.md  2026-04-22-e2e-test.md
docs/superpowers/specs/: 2026-04-20-boiler-room-design.md  2026-04-22-e2e-test-design.md
tests/: test_git.py  test_github.py  test_main.py  test_models.py  test_pipeline.py
tests/agents/: test_agents.py
tests/e2e/: test_e2e.py
