[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boiler-room"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<2.13",
]

[project.scripts]
boiler-room = "boiler_room.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests against real GitHub (slow, requires gh auth) -- run with: pytest -m e2e",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["boiler_room*"]
